jsonapi_core/tests/compile_fail/enum_input.rs
use jsonapi_core::JsonApi;

#[derive(JsonApi)]
#[jsonapi(type = "things")]
enum Thing {
    A,
    B,
}

fn main() {}
