jsonapi_core/tests/compile_fail/enum_input.stderr
error: #[derive(JsonApi)] only supports structs
 --> tests/compile_fail/enum_input.rs:5:6
  |
5 | enum Thing {
  |      ^^^^^
